<?xml version="1.0"?>
<package format="2">
  <name>spa_core</name>
  <version>0.0.0</version>
  <description>The spa_core package</description>

  <maintainer email="lichangchun816@163.com">lcc</maintainer>

  <license>BSD</license>

  <author email="lichangchun816@163.com">Changchun Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>spa_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>spa_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
