<?xml version="1.0"?>
<package format="2">
  <name>spa_ls</name>
  <version>0.0.0</version>
  <description>The spa_ls package</description>

  <maintainer email="lichangchun816@163.com">lcc</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/spa_ls</url> -->

  <author email="lichangchun816@163.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>spa_core</build_depend>

  <exec_depend>spa_core</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
