<?xml version="1.0"?>
<package format="2">
  <name>spa_msgs</name>
  <version>0.1.0</version>
  <description>The spa_msgs package</description>
  <maintainer email="lichangchun816@163.com">Changchun Lee</maintainer>
  <license>BSD</license>
  <author >Changchun Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export>

  </export>
</package>
